--- a/welcome.html
+++ b/welcome.html
@@ -9,14 +9,26 @@
 <body>
     <div class="header">
         <h1>F.</h1>
-        <input type="text" class="searchbox" placeholder="What do you want to help now?">
+        <input type="text" class="searchbox" placeholder="What do you want help withx?">
         <button>Filter</button>
         <a href="#">Hire Talent</a>
         <a href="#">Hire Post</a>
         <a href="#">Payment</a>
         <a href="#">About us</a>
         <button class="login">Login/Signup</button>
+
     </div>
+    <div class="exploreSpace">
+        <a href="#">Web Design</a>
+        <a href="#">Photography</a>
+        <a href="#">Teaching</a>
+        <a href="#">Music & Audio</a>
+        <a href="#">Graphic Designer</a>
+        <a href="#">Digital Marketer</a>
+        <a href="#">Android Developer</a>
+        <a href="#">Story Writer</a>
+        <a href="#">Video Editor</a>
+        <a href="#">UI Designer</a>
     <div class="main">
         <h1>Flexihire</h1>
         <h2>First Time In India</h2>
