--- a/welcome.html
+++ b/welcome.html
@@ -39,5 +39,11 @@
         <h2>Crypto Based Payments.</h2>
         <h3>Fully Anonymous.</h3>
     </div>    
+    <div class="badgespace">
+        <img src="images/binace2.png" alt="">
+        <img src="images/coinbase.png" alt="">
+        <img src="images/escrowcom.png" alt="">
+        <img src="images/blockchain.png" alt="">
+    </div>
 </body>
 </html>
