--- a/profile.html
+++ b/profile.html
@@ -4,18 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="profilestyle.css" >
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
     <div class="header">
         <h1>Flexhire</h1>
         <input type="text" class="searchbar" placeholder="What are you looking today?">
         <button>Filter</button>
-        <div class="rightbox">
-            <a href="#" class="dashboard">My Dashboard</a>
-            <a href="#" class="prof">My Profile</a>
-         </div>
-        
+        <a class="dash" href="#">My Dashboard</a>
+        <a class="profile" href="#">My Profile</a>
     </div>
+    <h1 class="text1">Dashboard</h1>
+    <div class="container">
+        <div class="leftside">
+            <div class="profile"></div>
+            <h1 class="name">Mafew</h1>
+            <h1 class="star">⭐ ⭐ ⭐ ⭐ ⭐ </h1>
+            <p class="rating">5.0(2 reviews)</p>
+            <p class="location">Banglore, Karnataka</p>
+            <p class="time">Joined July 8th, 2023</p>
+        </div>
+        <div class="rightside">
+            <p class="profits">Total Profits : 2000</p>
+            <p class="taken">Total Job Taken : 3</p>
+            <p class="about">About : I am experienced web developer in front end</p>
+            <p class="skill">Skills and Expentise : HTML5, CSS,JAVASCRIPT,JQUERY</p>
+            <p class="portfolio">portfolio : even idk</p>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="left">
+            <h1>Recent Works</h1>
+            <div class="box"></div>
+            <h3>Include: youtube video</h3>
+        </div>
+        <div class="right">
+            <h1>Testimonials</h1>
+            <h2>viktor : mafex is great but 031 is supergreat </h2>
+            <h2>emanuel : always 031 is 10</h2>
+        </div>
+    </div>
+    <div class="footer"></div>
 </body>
 </html>
